frontend/test/should_fail/computations_no_use_before_def_003.grg
function one() : int
{
	def var res:int;
	res = 1;
	return(res);
}

test t : (int)
{	
	independent {
	---
		yield {
			resres = one() + 2;
			def var resres:int;
			yield res = resres;
		}
	}
---
	def var res:int;
	
	return (res);
}

